--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pandarallel = "^1.6.5"
 # uvicorn = "^0.23.2"
 
 
+
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.10.1"}
 ipykernel = "^6.26.0"
@@ -57,6 +58,7 @@ seaborn = "^0.13.0"
 missingno = "^0.5.2"
 
 [tool.poetry.group.qa.dependencies]
+pre-commit = "^3.6.0"
 pep8 = "^1.7.1"
 mypy = "^1.6.1"
 flake8 = "^6.1.0"
