--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,25 @@ vulture = "^2.11"
 mccabe = "^0.7.0"
 pyupgrade = "^3.15.0"
 
+[tool.pycln]
+all = true
+
+# [tool.mypy]
+# show_error_codes = true
+# ignore_missing_imports = true
+# no_strict_optional = true
+
+# [tool.isort]
+# line_length = 88
+# multi_line_output = 3
+# include_trailing_comma = true
+# force_grid_wrap = 0
+# use_parentheses = true
+# ensure_newline_before_comments = true
+
+[tool.black]
+line-length = 88
+
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
 
