--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: debug-statements
     -   id: double-quote-string-fixer
-    -   id: name-tests-test
+    # -   id: name-tests-test
     -   id: requirements-txt-fixer
     -   id: check-toml
     -   id: check-yaml
@@ -50,7 +50,7 @@ repos:
         additional_dependencies: [types-all]
         exclude: ^testing/resources/
 
-# black-jupyter
+# black
 -   repo: https://github.com/psf/black-pre-commit-mirror
     rev: 24.1.1
     hooks:
@@ -58,15 +58,11 @@ repos:
         name: black-jupyter (python)
         args: [--config=pyproject.toml]
         # language_version: python3.10
-
-# black
--   repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 23.10.1
-    hooks:
     -   id: black
         name: black (python)
         args : [--config=pyproject.toml]
         # language_version: python3.10
+
 
 # isort
 -   repo: https://github.com/pycqa/isort
@@ -74,7 +70,7 @@ repos:
     hooks:
     -   id: isort
         name: isort (python)
-        args: [--config=pyproject.toml]
+        # args: [--config=pyproject.toml]
 
 # pycln
 -   repo: https://github.com/hadialqattan/pycln
@@ -90,3 +86,12 @@ repos:
 #     hooks:
 #     -   id: pylint
 #         args: [--rcfile=.pylintrc]
+
+
+-   repo: local
+    hooks:
+    -   id: run_tests
+        language: script
+        name: Run tests
+        entry: .utils/pytest.sh
+        stage: [commit]
