--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -87,7 +87,7 @@ repos:
 #     -   id: pylint
 #         args: [--rcfile=.pylintrc]
 
-
+# pytest
 -   repo: local
     hooks:
     -   id: run_tests
@@ -95,3 +95,9 @@ repos:
         name: Run tests
         entry: .utils/pytest.sh
         stage: [commit]
+
+# pydocstyle
+-   repo: https://github.com/pycqa/pydocstyle
+    rev: 4.0.0  # pick a git hash / tag to point to
+    hooks:
+    -   id: pydocstyle
