--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -92,7 +92,7 @@ repos:
     hooks:
     -   id: run_tests
         language: script
-        name: Run tests
+        name: run_tests
         entry: .utils/pytest.sh
         stage: [commit]
 
@@ -101,3 +101,4 @@ repos:
     rev: 4.0.0  # pick a git hash / tag to point to
     hooks:
     -   id: pydocstyle
+        name: pydocstyle
