--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,44 +1,99 @@
 name: CI
 
 on:
+
   push:
-    branches: 
+    branches:
       - main
       - dev
       - Dev
       - '*'
+
   pull_request:
-    branches: 
+    branches:
       - main
       - dev
       - Dev
+
 jobs:
+
+  # Test job
   test:
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10"] # [3.6, 3.11]
 
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10.12"]
+        poetry-version: ["1.7.0"]
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Lint with Flake8
-      run: flake8 .
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
 
-    - name: Format with Black
-      run: black .
+      - name: View poetry --help
+        run: poetry --help
 
-    # - name: Test with Pytest
-    #   run: pytest tests/  # better pytest -vv -x -s tests/
+      - name: poetry Install
+        run: poetry install
+
+      # - name: Run Pytest
+      #   run: poetry run pytest
+
+      # - name : coverage
+      #   run: poetry run pytest --cov=app --cov-report=xml
+
+  # Code quality job
+  code-quality:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: true
+      matrix:
+        python-version: ["3.10.12"]
+        poetry-version: ["1.7.0"]
+
+    steps:
+
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+
+      - name: View poetry --help
+        run: poetry --help
+
+      - name: poetry Install
+        run: poetry install
+
+      - name: Run black
+        run: poetry run black . --check
+
+      - name: Run isort
+        run: poetry run isort . --check-only --profile black
+
+      - name: Run flake8
+        run: poetry run flake8 .
+
+      - name: Run bandit
+        run: poetry run bandit .
+
+      - name: Run safety
+        run: poetry run safety check
