--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,23 +18,26 @@ pandarallel = "^1.6.5"
 # click = "^8.1.7"
 # requests = "^2.31.0"
 # uvicorn = "^0.23.2"
-jupytext = "^1.16.1"
-
-
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.10.1"}
 ipykernel = "^6.26.0"
 jupyter = "^1.0.0"
-notebook = "^7.0.6"
-jupyterlab = "^4.0.7"
-jupytext = "^1.15.2"
+# notebook = "^7.0.6"
+# jupyterlab = "^4.0.7"
+# jupytext = "^1.15.2"
 ipywidgets = "^8.1.1"
 session-info = "^1.0.0"
 jupyter-contrib-nbextensions = "^0.7.0"
 ipython = "^8.16.1"
 wheel = "^0.41.2"
 setuptools = "^68.2.2"
+jupytext = "^1.16.1"
+# jupyter = "^1.0.0"
+jupyterlab = "^4.1.0"
+notebook = "^7.0.7"
+mkdocs = "^1.5.3"
+
 
 [tool.poetry.group.ml.dependencies]
 scikit-learn = "^1.3.2"
@@ -63,7 +66,6 @@ pre-commit = "^3.6.0"
 pep8 = "^1.7.1"
 mypy = "^1.6.1"
 flake8 = "^6.1.0"
-coverage = "^7.3.2"
 pylint = "^3.0.2"
 pycln = "^2.4.0"
 bandit = "^1.7.7"
@@ -73,14 +75,18 @@ pydocstyle = "^6.3.0"
 vulture = "^2.11"
 mccabe = "^0.7.0"
 pyupgrade = "^3.15.0"
+safety = "^3.0.1"
+coverage = "^7.4.1"
+# coverage = "^7.3.2"
+coverage-badge = "^1.1.0"
 
 [tool.pycln]
 all = true
 
-[tool.mypy]
-show_error_codes = true
-ignore_missing_imports = true
-no_strict_optional = true
+# [tool.mypy]
+# show_error_codes = true
+# ignore_missing_imports = true
+# no_strict_optional = true
 
 [tool.isort]
 line_length = 88
@@ -92,6 +98,14 @@ multi_line_output = 3
 
 [tool.black]
 line-length = 88
+
+
+
+
+
+
+
+
 
 
 [tool.poetry.group.test.dependencies]
