--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         python-version: ["3.10.12"]
         poetry-version: ["1.7.0"]
@@ -83,8 +83,6 @@ jobs:
       - name: poetry Install
         run: poetry install
 
-      - name: Run black
-        run: poetry run black . --check
 
       - name: Run isort
         run: poetry run isort . --check-only --profile black
@@ -97,3 +95,6 @@ jobs:
 
       - name: Run safety
         run: poetry run safety check
+
+      - name: Run black
+        run: poetry run black . --check
