--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,8 +99,15 @@ multi_line_output = 3
 [tool.black]
 line-length = 88
 
-
-
+[tool.vulture]
+exclude = ["*file*.py", "dir/"]
+ignore_decorators = ["@app.route", "@require_*"]
+ignore_names = ["visit_*", "do_*"]
+make_whitelist = true
+min_confidence = 80
+paths = ["myscript.py", "mydir", "whitelist.py"]
+sort_by_size = true
+verbose = true
 
 
 
