spec install for ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
         run: poetry --help
 
       - name: poetry Install
-        run: poetry install
+        run: poetry install --only test
 
       # - name: Run Pytest
       #   run: poetry run pytest
@@ -81,7 +81,7 @@ jobs:
         run: poetry --help
 
       - name: poetry Install
-        run: poetry install
+        run: poetry install --only qa
 
       - name: Run flake8
         run: poetry run flake8 .
